[spi] add backward compatible namespacing to AlertTemplate (#1471)
* [spi] make findUniqueByNameAndNamespace throw if multiple entities are found

* [server] add namespacing to recommended templates loading

* [server] add namespacing to AlertTemplate

* add template backward compatibility

* refactor exception management for template rendering

* reduce indirections